Added additional untracked files.

--- a/visualization/visualization/static/app/partials/links.html
+++ b/visualization/visualization/static/app/partials/links.html
@@ -1,4 +1,4 @@
-<div class="row" data-ng-controller="MapCtrl">
+<div class="row" data-ng-controller="LinkCtrl">
      <div id="map"></div>
     <script>
 
