--- a/visualization/visualization/static/app/partials/cells.html
+++ b/visualization/visualization/static/app/partials/cells.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="row" data-ng-controller="CellCtrl">
+     <div id="map"></div>
+    <script>
 
-</body>
-</html>
+    </script>
+</div>
